--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "netlify": "^11.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.27.1",
     "react-icons": "^4.3.1",
     "react-native-unordered-list": "^1.0.4",
     "react-native-web": "^0.17.6",
     "react-onclickoutside": "^6.12.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
